tests/baselines/reference/restParamModifier.errors.txt
tests/cases/compiler/restParamModifier.ts(2,27): error TS1005: '=' expected.
tests/cases/compiler/restParamModifier.ts(2,27): error TS2304: Cannot find name 'rest'.
tests/cases/compiler/restParamModifier.ts(2,31): error TS1005: ',' expected.
tests/cases/compiler/restParamModifier.ts(2,39): error TS1005: '=' expected.


==== tests/cases/compiler/restParamModifier.ts (4 errors) ====
    class C {
        constructor(...public rest: string[]) {}
                              ~~~~
!!! error TS1005: '=' expected.
                              ~~~~
!!! error TS2304: Cannot find name 'rest'.
                                  ~
!!! error TS1005: ',' expected.
                                          ~
!!! error TS1005: '=' expected.
    }